--- a/nodeapp/Dockerfile
+++ b/nodeapp/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:lts-alpine
 ENV NODE_ENV=production
-WORKDIR /usr/src/catbot-9000
+WORKDIR /usr/src/hello-atari
 COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "./"]
 RUN npm install && mv node_modules ../
 COPY . .
